--- a/app/_devapp/css/app.scss
+++ b/app/_devapp/css/app.scss
@@ -14,6 +14,9 @@ body{
 
 
 }
+.homeMenu{
+  margin-top:$topbar-height;
+}
 .paragraph{
   color:$text-color-alt;
 }
@@ -333,6 +336,7 @@ body{
 
 }
 #layout-content{
+
   .home{
     margin-top:$topbar-height;
     padding-top: 5px;
