--- a/app/_devapp/css/app.scss
+++ b/app/_devapp/css/app.scss
@@ -1,13 +1,5 @@
-$primary-color:#44ab10;
-$secondary-color:#7ade4b;
-$background-color:#141414;
-$background-color-light:lighten($background-color,25%);
-$background-color-alt:#fff;
-$text-color:black;
-$text-color-alt:#fff;
-$topbar-height:60px;
-$menubar-height:30px;
-$content-offset:$topbar-height;
+@import "variables/GES_default";
+@import "custom_icons";
 
 body{
   background-color:$background-color;
@@ -50,9 +42,7 @@ body{
 .p-highlight a{
   background-color:$primary-color!important;
 }
-.p-focus{
 
-}
 .p-accordion{
 
   .p-accordion-content{
@@ -470,7 +460,7 @@ body{
   position:relative;
 }
 .LoginForm {
-
+  @import "pages/loginForm";
   padding: 5px;
   border-radius: 10px;
   width:400px;
@@ -478,66 +468,13 @@ body{
   border: 2px solid $primary-color;
   background-color: $background-color-alt;
 
-  #LoginHeader {
-    img {
-      width: 200px;
-      height: auto;
-    }
-  }
-  .p-tabview{
-    .p-tabview-nav{
-      border-radius: 4px 4px 0 0;
-      padding: 10px;
-      background-image: -webkit-linear-gradient(left,$primary-color,$secondary-color)!important;
-      a{
-        background-color:transparent!important;
-        color:$text-color-alt;
-        border-color:$text-color;
-      }
-      .p-highlight a{
-        background-color:$text-color-alt!important;
-        color:$text-color!important;
-      }
 
-    }
-
-  }
-
-  #LoginSubmit {
-
-   // margin-top: 60px;
-  }
-
-  .LoginField {
-
-    margin: 20px auto;
-
-
-    h1 {
-      color: $text-color;
-    }
-
-
-  }
 
 
 }
 .contact{
-  .p-editor-container{
-    height:70%;
-  }
-  .CompanyAddress{
-      span{
-        font-weight: bold;
-      }
-      font-size:16px;
-      color:$text-color-alt;
-      text-align: center;
-  }
-  .NewCompanyAddress{
+  @import "pages/contact";
 
-    outline: 2px $primary-color solid;
-  }
 }
 .save-page,.submitPage{
 
@@ -620,26 +557,5 @@ body{
   }
 }
 
-.new-icon{
-  background:$primary-color;
-  display: inline-block;
-  width: 30px;
-  height: 30px;
-  position: relative;
-  text-align: center;
-  transform: rotate(20deg);
-}
-.new-icon:before {
-  content:"NEW!";
-  font-weight: bold;
-  font-size:10px;
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 30px;
-  width: 30px;
-  background: $primary-color;
-  transform: rotate(315deg);
-  z-index:1;
-}
+
 
