--- a/app/_devapp/css/app.scss
+++ b/app/_devapp/css/app.scss
@@ -1,6 +1,7 @@
 @import "variables/GES_default";
 @import "custom_icons";
 
+
 body{
   background-color:$background-color;
 
@@ -18,7 +19,7 @@ body{
   font-size:24px;
   font-weight: bold;
 }
-.p-menubar{
+.store .p-menubar{
   background-color: $secondary-color!important;
   border-color:$secondary-color!important;
 
@@ -165,6 +166,100 @@ body{
 }
 
 .layout-header{
+  height:$header-height;
+  position: fixed;
+  display: inline-block;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 999;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.3);
+  #HeaderImg{
+    width:auto!important;
+    height: $header-height;
+
+    a{
+      height:inherit;
+      img{
+        padding:5px;
+        height:inherit;
+      }
+    }
+  }
+  .menu-button{
+    display:none;
+    color: $background-color-alt;
+    font-size: 24px;
+    height:$topbar-height;
+    width:$topbar-height;
+    line-height:$topbar-height;
+    text-align: center;
+    cursor: pointer;
+    -webkit-transition: background-color 0.2s;
+    transition: background-color 0.2s;
+    :hover{
+      background-color: $secondary-color;
+    }
+    i{
+      width:inherit;
+      line-height:inherit;
+    }
+  }
+  .header-menu{
+    li{
+      display:inline-block;
+    }
+  }
+  .search-icon,.search-bar{
+    display:inline-block;
+    height: 100%;
+    .search-field{
+      padding:5px;
+      height:inherit;
+      input{
+        width:400px;
+      }
+
+      margin:5px auto;
+      align-content: center;
+    }
+  }
+  .search-icon{
+    width:$topbar-height;
+    :hover{
+      color:$secondary-color;
+    }
+  }
+  .search-bar{
+    display:none;
+  }
+  .active{
+    display:inline-block!important;
+    -webkit-transition: all .6s linear;
+    -moz-transition: all .6s linear;
+    -o-transition: all .6s linear;
+    transition: all .6s linear;
+  }
+  .account-button{
+    li{
+     // float:left!important;
+      width:100%;
+    }
+    height: 100%;
+    .p-button{
+      width:$topbar-height;
+      height:$topbar-height;
+      background-color:darken($primary-color,7%);
+    }
+    :hover{
+      color:$secondary-color;
+    }
+  }
+
+
+
+}
+/*.layout-header{
 
 
   background-color:$primary-color;
@@ -325,10 +420,12 @@ body{
   }
 
 }
+
+ */
 #layout-content{
 
   .home{
-    margin-top:$topbar-height;
+    margin-top:$header-height;
     padding-top: 5px;
   }
 
