--- a/app/_devapp/css/app.css
+++ b/app/_devapp/css/app.css
@@ -22,9 +22,11 @@
   z-index: 1;
 }
 
-html, body {
+body {
   background-color: #F6F8F9;
-  height: 100%;
+  min-height: 100%;
+  position: relative;
+  padding-bottom: 50px;
 }
 
 .homeMenu {
@@ -234,13 +236,6 @@ html, body {
 .layout-header .header-menu .header-menu-options .search-bar .search-field input {
   width: 400px;
 }
-.layout-header .header-menu .header-menu-options .headerButton {
-  /*span{
-    margin-right:$topbar-height/2;
-    height:100%!important;
-  }
-  width:$topbar-height!important;*/
-}
 .layout-header .header-menu .header-menu-options .headerButton i {
   padding: 15px;
 }
@@ -316,176 +311,13 @@ html, body {
   font-size: 16px;
   font-weight: bold;
 }
-.layout-header .header-menu .headerNav :hover, .layout-header .header-menu .headerNav .active {
+.layout-header .header-menu .headerNav .active, .layout-header .header-menu .headerNav li:hover {
   border-bottom-color: #44ab10;
 }
-.layout-header .header-menu .headerNav :hover a, .layout-header .header-menu .headerNav .active a {
+.layout-header .header-menu .headerNav .active a, .layout-header .header-menu .headerNav li:hover a {
   color: #44ab10;
 }
 
-/*.layout-header{
-
-
-  background-color:$primary-color;
-  display:block;
-  padding:0;
-  height:$topbar-height;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  z-index: 999;
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.3);
-  #HeaderImg{
-      display: inline-block;
-      height:$topbar-height;
-
-      line-height:$topbar-height;
-      a{
-        height:inherit;
-        img{
-          padding:5px;
-          height:inherit;
-        }
-      }
-
-  }
-  .menu-button{
-    display:none;
-    color: $background-color-alt;
-    font-size: 24px;
-    height:$topbar-height;
-    width:$topbar-height;
-    line-height:$topbar-height;
-    text-align: center;
-    cursor: pointer;
-    -webkit-transition: background-color 0.2s;
-    transition: background-color 0.2s;
-    :hover{
-      background-color: $secondary-color;
-    }
-    i{
-      width:inherit;
-      line-height:inherit;
-    }
-  }
-  .header-menu{
-    list-style-type: none;
-    float: right;
-    margin:0;
-    padding: 0;
-    height: 100%;
-    li{
-      display: inline-block;
-      height: 100%;
-      float:right;
-
-
-    }
-    .menu-highlight{
-      span, a{
-        text-decoration: none;
-        color: $background-color-alt;
-        min-width: 120px;
-        display: inline-block;
-        text-align: center;
-        height: 100%;
-        line-height: $topbar-height;
-        -webkit-transition: background-color 0.2s;
-        transition: background-color 0.2s;
-
-      }
-      :hover,:focus{
-        background-color:$secondary-color!important;
-      }
-
-
-    }
-    .account-button{
-      :hover{
-        color:$secondary-color;
-      }
-    }
-    .search-icon,.search-bar{
-      display:inline-block;
-      float:left;
-      height: 100%;
-
-      .search-input{
-        float:left;
-      }
-
-      span{
-        margin:0;
-        width:inherit;
-        height:inherit;
-        text-decoration: none;
-        color: $text-color;
-        text-align:center;
-        line-height: $topbar-height;
-        :hover{
-          color:$background-color-alt;
-        }
-
-      }
-      .search-field{
-        padding:5px;
-        height:inherit;
-        input{
-          width:400px;
-        }
-
-        margin:5px auto;
-        align-content: center;
-      }
-
-
-
-    }
-    .search-bar{
-      display:none;
-    }
-    .active{
-      display:inline-block!important;
-      -webkit-transition: all .6s linear;
-      -moz-transition: all .6s linear;
-      -o-transition: all .6s linear;
-      transition: all .6s linear;
-    }
-
-    .search-icon{
-      width:$topbar-height;
-    }
-    .menu-highlight{
-      background-color:darken($primary-color,7%);
-    }
-    .account-button{
-     li{
-       float:left!important;
-       width:100%;
-     }
-      height: 100%;
-      .p-menu{
-        .p-menu-item{
-
-        }
-      }
-      .p-button{
-          width:$topbar-height;
-          height:$topbar-height;
-          background-color:darken($primary-color,7%);
-
-
-
-      }
-
-    }
-
-  }
-
-}
-
- */
 #layout-content {
   position: absolute;
   margin-top: 100px !important;
@@ -493,7 +325,7 @@ html, body {
   min-height: 100%;
 }
 #layout-content .parallax {
-  background-image: url("../../assets/img/GES_Main_Header.svg");
+  background-image: url("../../assets/img/GES_Glossy.png");
   height: 1000px;
   width: 100%;
   background-attachment: fixed;
@@ -693,20 +525,21 @@ html, body {
   #layout-content .p-sidebar-close {
     font-size: 24px;
   }
-  #layout-content #sidebarMenu {
+
+  #sidebarMenu {
     padding: 0;
     top: 60px;
   }
-  #layout-content #sidebarMenu .p-inputgroup {
+  #sidebarMenu .p-inputgroup {
     display: inline-block;
     padding: 10px;
     align-content: center;
     margin: auto;
   }
-  #layout-content #sidebarMenu .p-sidebar-close {
+  #sidebarMenu .p-sidebar-close {
     display: none;
   }
-  #layout-content #sidebarMenu .p-menu {
+  #sidebarMenu .p-menu {
     width: 100% !important;
     border: none !important;
   }
@@ -725,7 +558,11 @@ html, body {
   }
 }
 footer {
-  margin-bottom: 0 !important;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 50px;
   color: grey;
   text-align: center;
   font-size: 10px;
